# Compilator_O

./: CMakeLists.txt  Compilator.vcxproj  Compilator.vcxproj.filters  Dockerfile  README.md  main.cpp
error/: Error.cpp
fin/error/: Error.h
fin/parser/: Parser.cpp  Parser.h
fin/scanner/: Scanner.cpp  Scanner.h
fin/table/: TableOfName.cpp
fin/virtualMachine/: generateCode.cpp  generateCode.h  ovm.cpp  ovm.h
old/parser/: Parser.cpp  Parser.h
old/scanner/: Scanner.cpp  Scanner.h
old/table/: TableOfName.h
old/virtualMachine/: generateCode.cpp  generateCode.h  ovm.cpp  ovm.h
old/x64/Debug/: Compilator.exe.recipe  vc143.idb
old/x64/Debug/Compilator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Compilator.lastbuildstate  link.secondary.1.tlog  link.write.1.tlog
old2/parser/: Parser.cpp
old2/sourceCodeDriver/: Driver.cpp
old2/table/: Item.h
old2/virtualMachine/: generateCode.cpp  generateCode.h
old3/parser/: Parser.cpp
old3/scanner/: Scanner.h
old3/virtualMachine/: ovm.cpp  ovm.h
oldnew/parser/: Parser.h
oldnew/scanner/: Scanner.cpp
oldnew/sourceCodeDriver/: Driver.h
oldnew/virtualMachine/: generateCode.cpp
parser/: Parser.cpp  Parser.h
scanner/: Scanner.cpp  Scanner.h
sourceCodeDriver/: Driver.h
table/: TableOfName.cpp
virtualMachine/: generateCode.cpp
x64/Debug/: vc143.idb
x64/Debug/Compilator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog
